# alex-1883-quiet-mail

./: .env.example  .gitignore  .plan  .prettierignore  Cargo.toml  README.md  package-lock.json  package.json  playwright.config.ts
backend/: Cargo.toml
backend/src/: account.rs  app_state.rs  auth.rs  config.rs  db.rs  email.rs  error.rs  mail.rs  main.rs  router.rs
docs/: deployment.md
e2e/: mailbox.spec.ts
frontend/: eslint.config.js  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/auth/: AuthContext.tsx  AuthGate.tsx  LoginPage.tsx  api.ts  types.ts  useAuth.ts
frontend/src/components/layout/: AppFrame.tsx  SidebarNav.tsx
frontend/src/components/ui/: Button.tsx  EmptyState.tsx  UserBadge.tsx
frontend/src/mail/: ComposePanel.tsx  FolderSidebar.tsx  MailboxView.tsx  MessageList.tsx  ReadingPane.tsx  SearchBar.tsx  SearchResultsView.tsx  api.ts  types.ts
frontend/src/theme/: ThemeContext.tsx  ThemeToggle.tsx  useTheme.ts
migrations/: 20260719000100_baseline.sql  20260719000200_create_accounts.sql  20260719000300_create_users.sql  20260719000400_create_folders_and_messages.sql
